@@ -26,6 +26,7 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -76,22 +77,30 @@ public class PotMemberCommandServiceImpl implements PotMemberCommandService {
             potApplicationRepository.save(application);
         }
 
-        PotMember member = potMemberConverter.toEntity(potCreatUser, pot, null, true);
-        newMembers.add(member);
+        // 생성자 PotMember는 이미 createPot 단계에서 저장됨 → 새로 만들지 말고 조회
+        PotMember creatorPM = potMemberRepository.findByPotIdAndUserId(potId, potCreator.getId());
+        if (creatorPM == null) {
+            throw new PotHandler(ErrorStatus.POT_MEMBER_NOT_FOUND);
+        }
 
+        // 승인된 멤버들만 저장
         List<PotMember> savedMembers = potMemberRepository.saveAll(newMembers);
 
         // ChatRoom + ChatRoomInfo 생성
         Long chatRoomId = chatRoomCommandService.createChatRoom(pot.getPotName(), pot);
-        List<Long> potMemberIds = savedMembers.stream()
-                .map(PotMember::getPotMemberId)
-                .collect(Collectors.toList());
+        List<Long> potMemberIds = Stream.concat(
+                Stream.of(creatorPM.getPotMemberId()),
+                savedMembers.stream().map(PotMember::getPotMemberId)
+        ).toList();
+
         chatRoomInfoCommandService.createChatRoomInfo(potMemberIds, chatRoomId);
 
-        return savedMembers.stream()
+        // 응답 DTO = 생성자 + 신규 승인자 모두 포함
+        return Stream.concat(Stream.of(creatorPM), savedMembers.stream())
                 .map(potMemberConverter::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 
     @Transactional
     @Override
@@ -106,7 +115,7 @@ public class PotMemberCommandServiceImpl implements PotMemberCommandService {
     }
 
     @Override
-    @org.springframework.transaction.annotation.Transactional
+    @Transactional
     public void removeMemberFromPot(Long potId) {
         User user = authService.getCurrentUser();
         Pot pot = potRepository.findById(potId)
